--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ add_executable(main src/main.cpp)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /O2")
+
 target_include_directories(main PUBLIC ${CMAKE_SOURCE_DIR}/include)
 
 find_package(EnTT CONFIG REQUIRED)
